# nexo-rs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  Dockerfile  FOLLOWUPS.md  LICENSE-APACHE  Makefile  NOTICE  OPENCLAW-SKILLS-PLAN.md  PHASES-archive.md  PHASES-curated.md  PHASES-microapps.md  PHASES.md  README.md  RELEASE.md  SECURITY.md  brainstorm-82.13.b-takeover-context-restoration.md  brainstorm-82.13.c-inbound-pause-hook.md  brainstorm-83.8.12-multi-empresa.md  brainstorm-83.8.12.4.b-tenant-handler-filter.md  brainstorm-83.8.4.b-channel-outbound-adapter.md  brainstorm-agent-creator-v1.md  build.rs  design-agent-framework.md  design-kairos-port.md  dist-workspace.toml  docker-compose.yml  flake.nix  nexo-plugin-contract.md  plan-82.13.b-takeover-context-restoration.md  plan-82.13.c-inbound-pause-hook.md  plan-83.15.b-mock-admin-rpc.md  plan-83.8.12-multi-empresa.md  plan-83.8.12.4.b-tenant-handler-filter.md  plan-83.8.12.6.runtime-skill-loader-fallback.md  (+9 more)
crates/agent-registry/: Cargo.toml  README.md
crates/agent-registry/src/: dream_run.rs  lib.rs  log_buffer.rs  reattach.rs  registry.rs  store.rs  turn_log.rs  types.rs
crates/agent-registry/tests/: plan_mode_persists_across_restart.rs  registry_cap_and_queue.rs  registry_event_snapshot_refresh.rs  registry_lifecycle.rs  registry_reattach_after_restart.rs
crates/assistant/: CHANGELOG.md  Cargo.toml
crates/assistant/src/: lib.rs
crates/auth/: CHANGELOG.md  Cargo.toml  README.md
crates/auth/src/: audit.rs  breaker.rs  email.rs  error.rs  gauntlet.rs  google.rs  handle.rs  lib.rs  resolver.rs  store.rs  telegram.rs  telemetry.rs  whatsapp.rs  wire.rs
crates/auth/tests/: cross_agent_isolation.rs  fingerprint_stability.rs  hot_reload.rs  inline_path_display.rs  strict_legacy_google_auth.rs
crates/broker/: CHANGELOG.md  Cargo.toml  README.md
crates/broker/benches/: local_publish.rs  topic_matches.rs
crates/broker/src/: any.rs  disk_queue.rs  handle.rs  lib.rs  local.rs  nats.rs  topic.rs  types.rs
crates/broker/tests/: any_broker_test.rs  audit_fixes.rs  disk_queue_drain_nats_test.rs  disk_queue_test.rs  local_bus_test.rs
crates/companion-tui/: Cargo.toml  README.md
crates/companion-tui/src/: main.rs  ws.rs
crates/compliance-primitives/: CHANGELOG.md  Cargo.toml  README.md
crates/compliance-primitives/src/: anti_loop.rs  anti_manipulation.rs  consent_tracker.rs  lib.rs  opt_out.rs  pii_redactor.rs  rate_limit.rs
crates/config/: CHANGELOG.md  Cargo.toml  README.md
crates/config/src/: env.rs  lib.rs  migrations.rs
crates/config/tests/: binding_overrides.rs  load_test.rs  path_resolution.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: config_changes_store.rs  config_reload.rs  config_watch.rs  cron_runner.rs  cron_schedule.rs  heartbeat.rs  lib.rs  link_understanding.rs  llm_cron_dispatcher.rs  plan_mode.rs  runtime_snapshot.rs  team_message_router.rs  telemetry.rs  todo.rs
crates/core/tests/: agent_test.rs  channel_adapter_integration.rs  delegation_e2e_test.rs  dispatch_handlers_e2e_test.rs  exposable_catalog_test.rs  expose_tools_bridge_test.rs  expose_tools_typo_regression_test.rs  extension_hook_test.rs  extension_tool_test.rs  hot_reload_test.rs  link_understanding_fetch_test.rs  llm_behavior_test.rs  mcp_catalog_test.rs  mcp_resource_tool_test.rs  mcp_server_e2e_test.rs  mcp_session_test.rs  memory_tool_test.rs  nexo_plugin_registry_integration.rs  pairing_challenge_delivery.rs  pairing_gate_intake_test.rs  per_binding_override_test.rs  plugin_contributes_integration.rs  plugin_factory_registry_integration.rs  plugin_skills_integration.rs  plugin_test.rs  runtime_pause_hook_test.rs  runtime_test.rs  self_report_test.rs  session_test.rs  subprocess_plugin_e2e.rs  wire_plugin_registry_integration.rs
crates/dispatch-tools/: Cargo.toml  README.md
crates/dispatch-tools/src/: admin.rs  agent_control.rs  agent_query.rs  away_summary.rs  chain.rs  dispatch_followup.rs  event_forwarder.rs  lib.rs  policy_gate.rs  program_phase.rs  shutdown_drain.rs  subjects.rs  tool_names.rs
crates/dispatch-tools/tests/: agent_control_test.rs  agent_query_test.rs  chain_and_parallel.rs  dispatch_followup_test.rs  hook_dispatch_phase_chains.rs  hook_done_publishes_origin.rs  hook_idempotency_after_restart.rs  hook_shell_gated.rs  program_phase_dispatched.rs
crates/dream/: CHANGELOG.md  Cargo.toml  README.md
crates/dream/src/: auto_dream.rs  boot.rs  config.rs  consolidation_lock.rs  consolidation_prompt.rs  dream_progress_watcher.rs  error.rs  lib.rs  tools.rs
crates/driver-claude/: Cargo.toml  README.md
crates/driver-claude/src/: binding.rs  binding_sqlite.rs  child.rs  command.rs  config.rs  error.rs  event.rs  lib.rs  stream.rs  turn.rs
crates/driver-claude/tests/: binding_sqlite_persist_test.rs  binding_sqlite_test.rs  binding_store_test.rs  binding_v1_to_v2_migration_test.rs  command_builder_test.rs  config_yaml_test.rs  event_parsing_test.rs  spawn_turn_test.rs
crates/driver-loop/: Cargo.toml  README.md
crates/driver-loop/src/: acceptance.rs  attempt.rs  compact.rs  compact_store.rs  config.rs  error.rs  events.rs  (+14 more)
crates/driver-permission/: Cargo.toml  README.md
crates/driver-types/: Cargo.toml  README.md
crates/ext-installer/: Cargo.toml  README.md
crates/ext-registry/: Cargo.toml  README.md
crates/extensions/: CHANGELOG.md  Cargo.toml  README.md
crates/fork/: CHANGELOG.md  Cargo.toml  README.md
crates/llm/: CHANGELOG.md  Cargo.toml  README.md
crates/lsp/: CHANGELOG.md  Cargo.toml  README.md
crates/mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/memory/: CHANGELOG.md  Cargo.toml  README.md
crates/memory-snapshot/: CHANGELOG.md  Cargo.toml
crates/microapp-http/: CHANGELOG.md  Cargo.toml  README.md
crates/microapp-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/pairing/: CHANGELOG.md  Cargo.toml  README.md
crates/plugin-manifest/: CHANGELOG.md  Cargo.toml
crates/poller-ext/: CHANGELOG.md  Cargo.toml  README.md
crates/poller-tools/: CHANGELOG.md  Cargo.toml  README.md
(+1481 files in other folders)
