[workspace.lints.clippy]
# Pragmatic suppressions for pre-existing tech debt surfaced by
# clippy 1.95 toolchain bump. Each is tracked under PHASES.md
# Phase 34.x — re-enable when a hardening sprint cleans them up.
needless_borrows_for_generic_args = "allow"
print_literal = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"

[workspace]
members = [
    "crates/core",
    "crates/broker",
    "crates/llm",
    "crates/memory",
    "crates/config",
    "crates/extensions",
    "crates/mcp",
    "crates/resilience",
    "crates/taskflow",
    "crates/plugins/browser",
    "crates/plugins/whatsapp",
    "crates/plugins/telegram",
    "crates/plugins/email",
    "crates/plugins/google",
    "crates/setup",
    "crates/tunnel",
    "crates/auth",
    "crates/poller",
    "crates/poller-tools",
    "crates/poller-ext",
    "crates/web-search",
    "crates/pairing",
    "crates/driver-types",
    "crates/driver-claude",
    "crates/driver-permission",
    "crates/driver-loop",
    "crates/project-tracker",
    "crates/agent-registry",
    "crates/dispatch-tools",
    "crates/companion-tui",
]
# Keep standalone extension templates out of the agent workspace so they don't
# inherit our deps or lockfile. Users copy them verbatim and build separately.
exclude = [
    "extensions/template-rust",
]
resolver = "2"

[workspace.package]
version      = "0.1.1"
edition      = "2021"
rust-version = "1.80"
license      = "MIT OR Apache-2.0"
authors      = ["Cristian Garcia <informacion@cristiangarcia.co>"]
repository   = "https://github.com/lordmacu/nexo-rs"
homepage     = "https://lordmacu.github.io/nexo-rs/"
documentation = "https://lordmacu.github.io/nexo-rs/"
readme       = "README.md"
keywords     = ["agent", "llm", "ai", "nats", "framework"]
categories   = ["asynchronous", "api-bindings"]

[package]
name        = "nexo-rs"
description = "Nexo — multi-agent Rust framework: NATS event bus, pluggable LLM providers, channels (WhatsApp, Telegram, Email, Browser), memory, MCP, skills, and TaskFlow."
version      = "0.1.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
documentation = { workspace = true }
readme       = { workspace = true }
keywords     = { workspace = true }
categories   = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "nexo"
path = "src/main.rs"

[[bin]]
name = "browser-test"
path = "src/browser_test.rs"

[[bin]]
name = "integration-browser-check"
path = "src/integration_browser_check.rs"

[[bin]]
name = "llm_smoke"
path = "src/bin/llm_smoke.rs"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-nats         = "0.35"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "cookies", "charset", "http2", "macos-system-configuration"] }
sqlx               = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio-tungstenite  = "0.21"
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
config             = "0.14"
serde_yaml         = "0.9"
async-trait        = "0.1"
dashmap            = "6"
humantime          = "2"
humantime-serde    = "1.1"
regex              = "1"
which              = "6"
tokio-util         = { version = "0.7", features = ["rt"] }
bytes              = "1"
futures            = "0.3"
base64             = "0.22"
sha2               = "0.10"
hex                = "0.4"
sqlite-vec         = "0.1"
lru                = "0.12"
libsqlite3-sys     = "0.30"
git2               = { version = "0.19", default-features = false }
notify             = "6"
notify-debouncer-full = "0.3"
arc-swap           = "1"
eventsource-stream = "0.2"
semver             = "1"
tiktoken-rs        = "0.6"
blake3             = "1"

[dependencies]
tokio               = { workspace = true }
anyhow              = { workspace = true }
async-nats          = { workspace = true }
futures             = { workspace = true }
uuid                = { workspace = true }
rand                = "0.8"
rust-embed          = { version = "8", features = ["include-exclude"] }
sha2                = { workspace = true }
nexo-plugin-browser = { version = "0.1.1", path = "crates/plugins/browser" }
nexo-plugin-whatsapp = { version = "0.1.1", path = "crates/plugins/whatsapp" }
nexo-plugin-telegram = { version = "0.1.1", path = "crates/plugins/telegram" }
nexo-plugin-google = { version = "0.1.1", path = "crates/plugins/google" }
nexo-setup = { version = "0.1.1", path = "crates/setup" }
nexo-tunnel = { version = "0.1.1", path = "crates/tunnel" }
nexo-auth = { version = "0.1.1", path = "crates/auth" }
nexo-poller = { version = "0.1.1", path = "crates/poller" }
nexo-poller-tools = { version = "0.1.1", path = "crates/poller-tools" }
nexo-poller-ext = { version = "0.1.1", path = "crates/poller-ext" }
nexo-config = { version = "0.1.1", path = "crates/config" }
nexo-broker = { version = "0.1.1", path = "crates/broker" }
nexo-core = { version = "0.1.1", path = "crates/core" }
nexo-extensions = { version = "0.1.1", path = "crates/extensions" }
nexo-llm = { version = "0.1.1", path = "crates/llm" }
nexo-mcp = { version = "0.1.1", path = "crates/mcp" }
nexo-memory = { version = "0.1.2", path = "crates/memory" }
nexo-taskflow = { version = "0.1.1", path = "crates/taskflow" }
nexo-web-search = { version = "0.1.1", path = "crates/web-search" }
nexo-pairing = { version = "0.1.2", path = "crates/pairing" }
tokio-util          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
base64              = { workspace = true }
reqwest             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
serde_yaml          = { workspace = true }
chrono              = { workspace = true }
humantime           = { workspace = true }
async-trait         = { workspace = true }
