[package]
name = "agent-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
dashmap    = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
tokio      = { workspace = true }
agent-config = { path = "../config" }

[dev-dependencies]
tempfile           = "3"
tracing-subscriber = { workspace = true }
