[package]
name = "nexo-auth"
description   = "Per-agent credential resolver and gauntlet validation for Nexo channels."
version       = "0.1.1"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
dashmap    = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
tokio      = { workspace = true }
arc-swap   = { workspace = true }
secrecy    = "0.8"
toml       = "0.8"
base64     = { workspace = true }
nexo-config = { version = "0.1.1", path = "../config" }
nexo-resilience = { version = "0.1.1", path = "../resilience" }

[dev-dependencies]
tempfile           = "3"
tracing-subscriber = { workspace = true }
