[package]
name = "nexo-broker"
description   = "Async NATS broker abstraction with local fallback and disk queue for Nexo."
version       = "0.1.1"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
async-trait  = { workspace = true }
dashmap      = { workspace = true }
async-nats   = { workspace = true }
sqlx         = { workspace = true }
tracing      = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
tokio-util   = { workspace = true }
nexo-config = { version = "0.1.1", path = "../config" }
nexo-resilience = { version = "0.1.1", path = "../resilience" }
