[package]
name = "nexo-compliance-primitives"
description = "Reusable conversational-compliance primitives for nexo microapps (anti-loop, anti-manipulation, opt-out, PII redaction, per-user rate limit, consent tracking)."
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
serde   = { workspace = true, features = ["derive"] }
chrono  = { workspace = true }
regex   = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
