[package]
name = "agent-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
humantime-serde = "1"

[dev-dependencies]
tempfile = "3"
