[package]
name = "nexo-config"
description   = "YAML configuration loader with env var resolution for Nexo agents."
version       = "0.2.0"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
[dependencies]
serde      = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
humantime-serde = "1"
ipnetwork  = { workspace = true }
nexo-webhook-receiver = { path = "../webhook-receiver" }
nexo-tool-meta = { workspace = true }

[dev-dependencies]
tempfile = "3"
