[package]
name = "nexo-core"
description   = "Agent runtime: event bus, sessions, plugin trait, heartbeat, A2A delegation."
version       = "0.1.2"
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
authors       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
readme        = "README.md"
keywords      = { workspace = true }
categories    = { workspace = true }
[features]
default = ["schema-validation"]
# Enables pre-handler JSON Schema validation of tool arguments.
schema-validation = ["dep:jsonschema"]

[dependencies]
jsonschema = { version = "0.20", optional = true, default-features = false }
sha2        = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
dashmap     = { workspace = true }
humantime   = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
nexo-config = { version = "0.1.2", path = "../config" }
nexo-broker = { version = "0.1.2", path = "../broker" }
nexo-auth = { version = "0.1.2", path = "../auth" }
tracing       = { workspace = true }
async-trait   = { workspace = true }
tokio-util    = { workspace = true }
nexo-llm = { version = "0.1.2", path = "../llm" }
nexo-memory = { version = "0.1.3", path = "../memory" }
nexo-extensions = { version = "0.1.2", path = "../extensions" }
nexo-mcp = { version = "0.1.2", path = "../mcp" }
nexo-taskflow = { version = "0.1.2", path = "../taskflow" }
nexo-web-search = { version = "0.1.2", path = "../web-search" }
nexo-pairing    = { version = "0.1.2", path = "../pairing" }
futures         = { workspace = true }
arc-swap        = { workspace = true }
lru             = { workspace = true }
notify          = { workspace = true }
notify-debouncer-full = { workspace = true }
base64          = { workspace = true }
git2            = { workspace = true }
reqwest         = { workspace = true }
# Used by google_auth for URL-encoding OAuth parameters — already a
# transitive dep via reqwest so no new edges on the resolver.
serde_urlencoded = "0.7"
regex           = "1.10"
sqlx            = { workspace = true }
semver          = { workspace = true }

[dev-dependencies]
nexo-llm = { version = "0.1.2", path = "../llm", features = ["stub"] }
async-nats    = { workspace = true }
futures       = { workspace = true }
tempfile      = "3"
serial_test   = "3"
